[package]
edition = "2021"
name    = "mip"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
regex = "1.5.4"
serenity = { version = "0.10.9", default-features = false, features = [
    "rustls_backend",
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
] }
tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
