[package]
edition = "2021"
name    = "mip"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
regex = "1.7.1"
serenity = { version = "0.11.5", default-features = false, features = [
    "rustls_backend",
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "http",
    "utils",
] }
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
